[package]
name = "pretty_rest"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
serde = { version = "1.0", features = ["derive"] }
serde_qs = "0.14"
serde_json = "1.0"
reqwest = { version = "0.12" }

[dev-dependencies]
serde-aux = "4.7"
tokio = { version = "1.45", features = ["rt-multi-thread", "macros"] }